option('ssp', type : 'boolean', value : true, description : 'Compile with -fstack-protector')
option('asm', type : 'boolean', value : true, description : 'Compile assembly code -- Disabling this will disable all (including non-assembly) platform-specific optimizations on Unix systems)')
option('pie', type : 'boolean', value : true, description : 'Produce position independent executables')
option('blocking-random', type : 'boolean', value : false, description : 'Enable this switch only if /dev/urandom is totally broken on the target platform')
option('minimal', type : 'boolean', value : false, description : 'Only compile the minimum set of functions required for the high-level API')
option('pthread', type : 'boolean', value : true, description : 'Use pthreads library')
option('safecode', type : 'boolean', value: false, description : 'For maintainers only - please do not use')
option('optimize', type : 'boolean', value: false, description : 'Optimize for the native CPU - The resulting library will be faster but not portable')
option('soname-versions', type : 'boolean', value: true, description : 'Enable soname versions (must be disabled for Android)')
